# oracle-datadog-client

./: .gitignore  README.md  datadog-install-settings.sample.yml  datadog-settings.sample.yml  datadog.pkg.sql  extract-certificate-chain.py  install-datadog-lightweight.sh  install-datadog.yml  uninstall-datadog.yml
lightweight-client/: datadog_lwc.pkg.sql  datadog_lwc.tests.sql  oradatadog.py  pyproject.toml  requirements.txt
native-client/: README.md  datadog.pkg.sql
native-client/sql-install/: create-settings-table.sql  remove-network-ace.sql  update-setting.sql
sql-install/: create-network-ace.sql
