[tool.poetry]
name = "oracle-datadog-client-lightweight"
version = "1.0.0"
description = "Simple Datadog client for Oracle Database environments without DBA/administrative requirements"
authors = ["Cloudmation LLC <matt@cloudmation.io>"]

[tool.poetry.dependencies]
python = "^3.6"
cx_oracle = "7.3.*"
loguru = "0.5.*"
pyyaml = "5.4.*"
requests = "2.25.*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
